# pixiv2epub

./: .env.example  .gitignore  README.md  config.example.toml  main.py  pyproject.toml  whitelist.py
configs/: config.toml.example
src/core/: archiver.py  asset_manager.py  builder.py  component_generator.py  downloader.py
src/data/: models.py
src/pixiv2epub/: __main__.py  api.py  app.py  cli.py  constants.py  data_models.py  exceptions.py  gui.py  main.py  services.py
src/pixiv2epub/assets/epub/default/: _base_style.css.j2  content.opf.j2  cover_page.xhtml.j2  info_page.xhtml.j2  nav.xhtml.j2  page_wrapper.xhtml.j2  style.css.j2
src/pixiv2epub/assets/epub/pixiv/: content.opf.j2  info_page.xhtml.j2  nav.xhtml.j2  style.css.j2
src/pixiv2epub/assets/gui/: injector.js
src/pixiv2epub/builders/: base.py  base_builder.py
src/pixiv2epub/builders/epub/: archiver.py  asset_manager.py  builder.py  generator.py
src/pixiv2epub/core/: auth.py  coordinator.py  exceptions.py  settings.py
src/pixiv2epub/domain/: interfaces.py  orchestrator.py
src/pixiv2epub/entrypoints/: cli.py  constants.py  provider_factory.py  providers.py
src/pixiv2epub/entrypoints/gui/: manager.py
src/pixiv2epub/entrypoints/gui/assets/: injector.js
src/pixiv2epub/infrastructure/builders/: base.py
src/pixiv2epub/infrastructure/builders/epub/: asset_manager.py  builder.py  component_generator.py  constants.py  package_assembler.py
src/pixiv2epub/infrastructure/providers/: base.py  base_client.py  base_downloader.py  base_provider.py
src/pixiv2epub/infrastructure/providers/fanbox/: auth.py  client.py  constants.py  content_processor.py  downloader.py  fetcher.py  parser.py  provider.py  workspace_writer.py
src/pixiv2epub/infrastructure/providers/pixiv/: auth.py  client.py  constants.py  content_processor.py  downloader.py  fetcher.py  parser.py  provider.py  workspace_writer.py
src/pixiv2epub/infrastructure/repositories/: filesystem.py
src/pixiv2epub/infrastructure/strategies/: interfaces.py  mappers.py  parsers.py  update_checkers.py
src/pixiv2epub/models/: domain.py  fanbox.py  local.py  pixiv.py  workspace.py
src/pixiv2epub/orchestration/: coordinator.py
src/pixiv2epub/providers/: base.py  base_provider.py
src/pixiv2epub/providers/pixiv/: api_client.py  client.py  downloader.py  fingerprint.py  parser.py  persister.py  provider.py
src/pixiv2epub/shared/: constants.py  enums.py  exceptions.py  settings.py  themes.py
src/pixiv2epub/utils/: common.py  config.py  config_loader.py  filesystem_sanitizer.py  image_optimizer.py  logging.py  logging_setup.py  media_types.py  path_manager.py  url_parser.py
src/utils/: compressor.py  config.py  log_setup.py  path_manager.py
styles/: style.css
templates/: cover_page.xhtml.j2  page_wrapper.xhtml.j2
templates/epub/pixiv/: content.opf.j2  info_page.xhtml.j2
