[project]
name = "pixiv2epub"
version = "0.1.0"
description = "A tool to download novels from Pixiv and convert them into EPUB format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "jinja2>=3.1.6",
    "pixivpy3>=3.7.5",
    "rich>=14.1.0",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
pixiv2epub = "pixiv2epub.cli:main"

# --- アプリケーションのデフォルト設定 ---
[tool.pixiv2epub.workspace]
root_directory = "./.pixiv2epub_work"

[tool.pixiv2epub]
[tool.pixiv2epub.downloader]
api_delay = 1.0
api_retries = 3
overwrite_existing_images = false

[tool.pixiv2epub.builder]
output_directory = "./epubs"
filename_template = "{author_name}/{title}.epub"
series_filename_template = "{author_name}/{series_title}/[{author_name}] {series_title} - {title}.epub"
css_file = "styles/style.css"
cleanup_after_build = false

[tool.pixiv2epub.compression]
enabled = true
skip_if_larger = true
max_workers = 4

[tool.pixiv2epub.compression.pngquant]
colors = 256
quality = "65-90"
speed = 3
strip = true

[tool.pixiv2epub.compression.jpegoptim]
max_quality = 85
strip_all = true
progressive = true
preserve_timestamp = true

[tool.pixiv2epub.compression.cwebp]
quality = 75
lossless = false
metadata = "none"
