[project]
name = "pixiv2epub"
version = "0.1.0"
description = "A tool to download novels from Pixiv and convert them into EPUB format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pixivpy3>=3.7.5",
    "rich>=14.2.0",
    "pydantic-settings>=2.11.0",
    "canonicaljson>=2.0.0",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "poethepoet>=0.37.0",
    "loguru>=0.7.3",
    "typer>=0.19.2",
]
[dependency-groups]
dev = ["ipykernel>=6.30.1"]

[project.scripts]
pixiv2epub = "pixiv2epub.cli:app"

# --- ビルドシステムの定義 ---
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# --- poethepoetのタスク定義 ---
[tool.poe.tasks]
setup = [
    { cmd = "playwright install-deps" },
    { cmd = "playwright install" },
    { cmd = "uv pip install -e ." },
]
build = [{ cmd = "uv pip install -e ." }]

# --- アプリケーションのデフォルト設定 ---
[tool.pixiv2epub.workspace]
root_directory = "./.workspace"

[tool.pixiv2epub]
[tool.pixiv2epub.downloader]
api_delay = 1.0
api_retries = 3
overwrite_existing_images = false

[tool.pixiv2epub.builder]
output_directory = "./epubs"
filename_template = "{author_name}/{title}.epub"
series_filename_template = "{author_name}/{series_title}/{title}.epub"
cleanup_after_build = false

[tool.pixiv2epub.compression]
enabled = true
skip_if_larger = true
max_workers = 4

[tool.pixiv2epub.compression.pngquant]
colors = 256
quality = "65-90"
speed = 3
strip = true

[tool.pixiv2epub.compression.jpegoptim]
max_quality = 85
strip_all = true
progressive = true
preserve_timestamp = true

[tool.pixiv2epub.compression.cwebp]
quality = 75
lossless = false
metadata = "none"
